--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 include_directories(include)
 
 add_subdirectory(src)
+add_subdirectory(tools/PathGenerator/OutputPaths)
 
 if(${CMAKE_PROJECT_NAME} STREQUAL ${PROJECT_NAME})
     add_subdirectory(lib/googletest)
